what i do and next h1

--- a/index.html
+++ b/index.html
@@ -56,5 +56,30 @@
             </div>
         </div>
     </section>
+
+    <section class="what-i-do">
+        <h1>what I Do</h1>
+        <div class="do-three">
+            <div class="web-develop">
+                <img src="img/html-icon.png" alt="">
+                <h3>Web Developement</h3>
+                <p class="gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="creative-design left-margin">
+                <img src="img/idea.png" alt="">
+                <h3>Creative Design</h3>
+                <p "gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="photoshop left-margin">
+                <img src="img/picture-ic.png" alt="">
+                <h3>Photoshop</h3>
+                <p "gray-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="lets-work">
+        <h1>Lets Work</h1>
+    </section>
 </body>
 </html>
