latest work added

--- a/index.html
+++ b/index.html
@@ -78,8 +78,42 @@
         </div>
     </section>
 
-    <section class="lets-work">
-        <h1>Lets Work</h1>
+    <section class="latest-work">
+        <h1>Latest Work</h1>
+        <div class="work-list1">
+            <div class="team-section thirty-width">
+                <img src="img/portfolio/1.jpg" alt="">
+                <h3>Team Section</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+            <div class="app-page thirty-width left-margin">
+                <img src="img/portfolio/2.jpg" alt="">
+                <h3>App Landing Page</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+            <div class="creative-team-sec thirty-width left-margin right-margin">
+                <img src="img/portfolio/3.jpg" alt="">
+                <h3>Creative Team Section</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+        </div>
+        <div class="work-list2">
+            <div class="toogle-table thirty-width">
+                <img src="img/portfolio/4.jpg" alt="">
+                <h3>Toogle Pricing Table</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+            <div class="bootstrap thirty-width left-margin">
+                <img src="img/portfolio/5.jpg" alt="">
+                <h3>Bootstrap 5 Image Galary</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+            <div class="image-galary thirty-width left-margin right-margin">
+                <img src="img/portfolio/6.jpg" alt="">
+                <h3>Filterable Image Galary</h3>
+                <p class="red-text LWork-p-margin">Live Demo</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
