--- a/index.html
+++ b/index.html
@@ -115,5 +115,24 @@
             </div>
         </div>
     </section>
+
+    <section class="freelancer-projects">
+        <p class="center-text white-text freeLn-p1">Do you have any project ?</p>
+        <h1 class="center-text white-text">I'm Available For Freelancer Projects</h1>
+        <div class="center-text">
+            <button id="hire-me-btn">Hire Me</button>
+        </div>
+    </section>
+
+    <section class="testimonial">
+        <h1 class="center-text">Testimonial</h1>
+        <div class="testimonial-container">
+            <img src="img/testimonial/2.PNG" class="img-testtt" alt="">
+            
+            <h3 class="center-text">Raj Himachal</h3>
+            <p class="center-text testimonial-p1">Seo Manager</p>
+            <p class="testimonial-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error id hic quos ratione, fugiat facilis tenetur tempora perspiciatis blanditiis.</p>
+          </div>
+    </section>
 </body>
 </html>
