contact&fotter added

--- a/index.html
+++ b/index.html
@@ -134,5 +134,40 @@
             <p class="testimonial-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error id hic quos ratione, fugiat facilis tenetur tempora perspiciatis blanditiis.</p>
           </div>
     </section>
+
+    <section class="contact-me">
+        <h1 id="contact-me-title">Contact Me</h1>
+        <div class="contact-me-container">
+            <div class="address">
+                <div class="email">
+                    <img src="img/email-icon.png" alt="">
+                    <h4 class="contact-h4">Email</h4>
+                    <p class="contact-p">example@emial.com</p>
+                </div>
+                <div class="phone">
+                    <img src="img/call-icon.png" alt="">
+                    <h4 class="contact-h4">Phone</h4>
+                    <p class="contact-p">992 8003*****</p>
+                </div>
+                <div class="address-icon">
+                    <img src="img/address-icon.png" alt="">
+                    <h4 class="contact-h4">Address</h4>
+                    <p class="contact-p">101 street | Dhaka bangladesh</p>
+                </div>
+                
+            </div>
+            <div class="sms-box">
+                <input id="inputName" type="text" placeholder="Your Name">
+                <input id="inputEmail" type="email" placeholder="Your Email">
+                <input id="inputSub" type="text" placeholder="Subject">
+                <input id="inputSMS" type="textarea" placeholder="Message">
+                <button type="button" id="message-btn">Send Message</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="futtet">
+        <footer><p class="gray-text footer-text">© 2021 Hasibul Rupok</p></footer>
+    </section>
 </body>
 </html>
