skillBar menu-icon and footer birder added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <section class="topBar">
         <h2 class="UK">U.K</h2>
+        <img class="menu-icon" src="img/menu-icon.png" alt="">
     </section>
     <section class="profile">
         <div class="profile-info">
@@ -51,7 +52,26 @@
                 </div>
                 <a href="#">Download CV</a>
             </div>
-            <div class="about-me-graph">
+            <div class="skill-bar">
+                <p>HTML</p>
+                <div class="sikllBar-container">
+                    <div class="skills html"></div>
+                </div>
+
+                <p>CSS</p>
+                <div class="sikllBar-container">
+                    <div class="skills css"></div>
+                </div>
+
+                <p>Javascript</p>
+                <div class="sikllBar-container">
+                    <div class="skills js"></div>
+                </div>
+
+                <p>Bootstrap</p>
+                <div class="sikllBar-container">
+                    <div class="skills php"></div>
+                </div>
                 
             </div>
         </div>
