--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <section class="topBar">
         <h2 class="UK">U.K</h2>
         <img class="menu-icon" src="img/menu-icon.png" alt="">
     </section>
+
     <section class="profile">
         <div class="profile-info">
             <p>Hello, I'm </p>
@@ -39,15 +41,15 @@
                 <div class="about-me-bottom">
                     <div class="project">
                         <h1>100</h1>
-                        <p class="gray-text">PROJECT COMPLEATED</p>
+                        <p id="h1-center" class="gray-text">PROJECT COMPLEATED</p>
                     </div>
                     <div class="claint">
                         <h1>90</h1>
-                        <p class="gray-text">HAPPY CLAINTS</p>
+                        <p id="h1-center" class="gray-text">HAPPY CLAINTS</p>
                     </div>
                     <div class="review">
                         <h1>95</h1>
-                        <p class="gray-text">POSITIVE REVIEWS</p>
+                        <p id="h1-center" class="gray-text">POSITIVE REVIEWS</p>
                     </div>
                 </div>
                 <a href="#">Download CV</a>
@@ -103,34 +105,34 @@
         <div class="work-list1">
             <div class="team-section thirty-width">
                 <img src="img/portfolio/1.jpg" alt="">
-                <h3>Team Section</h3>
+                <h3 class="lWork-title">Team Section</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
             <div class="app-page thirty-width left-margin">
                 <img src="img/portfolio/2.jpg" alt="">
-                <h3>App Landing Page</h3>
+                <h3 class="lWork-title">App Landing Page</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
             <div class="creative-team-sec thirty-width left-margin right-margin">
                 <img src="img/portfolio/3.jpg" alt="">
-                <h3>Creative Team Section</h3>
+                <h3 class="lWork-title">Creative Team Section</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
         </div>
         <div class="work-list2">
             <div class="toogle-table thirty-width">
                 <img src="img/portfolio/4.jpg" alt="">
-                <h3>Toogle Pricing Table</h3>
+                <h3 class="lWork-title">Toogle Pricing Table</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
             <div class="bootstrap thirty-width left-margin">
                 <img src="img/portfolio/5.jpg" alt="">
-                <h3>Bootstrap 5 Image Galary</h3>
+                <h3 class="lWork-title">Bootstrap 5 Image Galary</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
             <div class="image-galary thirty-width left-margin right-margin">
                 <img src="img/portfolio/6.jpg" alt="">
-                <h3>Filterable Image Galary</h3>
+                <h3 class="lWork-title">Filterable Image Galary</h3>
                 <p class="red-text LWork-p-margin">Live Demo</p>
             </div>
         </div>
